fixed tracklist_edit. broke mass-add, though

--- a/app/views/albums/edit_tracklist.html.erb
+++ b/app/views/albums/edit_tracklist.html.erb
@@ -26,15 +26,15 @@
             <% end %>
           </div>
         </div>
-        <%= form_for 'source', :html => {:class => "form-horizontal"}, :url => addsourceforsong_path(:autocomplete => 'source_namehash'), :method => 'get', :remote => true do |f| %>
-          <%= fields_for "script" do |f| %>
+        <%= form_for 'source', :html => {:class => "form-horizontal"}, :url => addmodel_path(:autocomplete_path => 'source_namehash'), :method => 'get', :remote => true do |f| %>
+          <%= fields_for "div_id_list" do |f| %>
             Add to all songs:
-            <%= f.select 'name', @album.sources.map { |n| n.id.to_s + " - " + n.name } %>
-            <%= hidden_field_tag 'script[div_ids]', @album.songs.map(&:id).join(',') %>
+            <%= f.select 'default_value', @album.sources.map { |n| n.id.to_s + " - " + n.name } %>
+            <%= hidden_field_tag 'div_id_list[div_ids]', @album.songs.map(&:id).map {|a| "Sources#{a}"}.join(',') %>
             <%= submit_tag 'Add'%>
           <% end %>
         <% end %>
-        <%= form_for 'artist', :html => {:class => "form-horizontal"}, :url => addartistforsong_path, :method => 'get', :remote => true do |f| %>
+        <%= form_for 'artist', :html => {:class => "form-horizontal"}, :url => addmodel_path, :method => 'get', :remote => true do |f| %>
           <%= fields_for "script" do |f| %>
             Add to all songs:
             <%= f.select 'name', @album.artists.map { |n| n.id.to_s + " - " + n.name } %>
