Fixed all broken tests from big css update

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -6,6 +6,9 @@
 
 #super-view {
   @include make-row();
+  form#new_user_session {
+    text-align: center;
+  }
   #left-sidebar-form-view{
     @include make-sm-column(4);
   }
