--- a/app/views/layouts/forms/_fields.html.erb
+++ b/app/views/layouts/forms/_fields.html.erb
@@ -1,10 +1,7 @@
 <% if record.errors.any? %>
   <div id="error_explanation">
     <% if record.class == UserSession %>
-      <h2>Login Failed:</h2>
-      <% record.errors.messages.each do |v| %>
-        <div><%= v[1][0]%></div>
-      <% end %><br>
+      <h5>Login Failed: <%= record.errors.full_messages[0]%></h5>
     <% else %>
       <h2><%= pluralize(record.errors.count, "error") %> prohibited this <%= record.class.to_s.downcase %> from being saved:</h2>
       <ul>
