--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -1,7 +1,7 @@
-<% content_for :title do %>Search Results - <%= truncate(@query, length: 65) %><% end %>
+<% content_for :title do %><%= @query.empty? ? "Search for all records" : "Search Results" %><% end %>
 
 <% content_for :header do %>
-  <h2 class="text-center">Search Results for <%= truncate(@query, length: 65) %></h2>
+  <h2 class="text-center"><%= @query.empty? ? "Search for all records" : "Search Results" %></h2>
 <% end %>
 
 <div id="search">
