--- a/app/views/users/requestpasswordreset.html.erb
+++ b/app/views/users/requestpasswordreset.html.erb
@@ -8,7 +8,7 @@
 
 <p id="notice"><%= notice %></p>
 
-<% if notice.nil? || notice.starts_with?('Thank you!') == false %>
+<% if notice.nil? %>
   <h5>Please enter your email to request a password reset</h5>
   <%= form_for :website, :url => {:controller => :users, :action => 'passwordresetrequest'}, :html => {:class => 'form-horizontal'}  do |f| %>
     <%= fields_for :email do |f| %>
