--- a/app/views/tags/_edit_tags.html.erb
+++ b/app/views/tags/_edit_tags.html.erb
@@ -1,14 +1,12 @@
 <div id=<%= "Tags" + subject.id.to_s %>>
   Delete Tags:  
-  <% tags = subject.tags %>
-  <% tags.sort_by!(&:classification) %>
-  <% tags.each do |tag| %>
+  <% subject.tags.order(:classification).each do |tag| %>
     <span class=<%= "Tag" + tag.id.to_s %>>
       <%= link_to tag.name, removetag_path(:tag_id => tag.id, :subject_id => subject.id, :subject_type => subject.class.to_s), :remote => true%>
     </span>
   <% end %>
   <br>Add New Tags:
-  <% newtags = Tag.all - tags %>
+  <% newtags = (Tag.all - subject.tags) %>
   <% newtags.sort_by!(&:classification) %>
   <% tagclass = newtags.first.classification %>
   <% newtags.each do |tag| %>
