--- a/app/views/layouts/structural/_header.html.erb
+++ b/app/views/layouts/structural/_header.html.erb
@@ -31,6 +31,7 @@
         <% end %>
         <ul class="dropdown-menu">
           <li id="admin-scrape"><%= link_to "Scrape", maintenance_scrapeanalbum_path %></li>
+          <li id="admin-scrape"><%= link_to "Scrape Results", maintenance_scraperesults_path %></li>
         </ul>
       </li>      
     <% end %>
