changed front page

--- a/app/views/pages/front_page.html.erb
+++ b/app/views/pages/front_page.html.erb
@@ -16,8 +16,7 @@
       <div class="panel">
         <div class="panel-heading">About the author</div>
         <div class="panel-body">
-          The author loves anime music so much, he learned how
-          to program just to build a database of it.
+          The author loves anime music so much, he built a database to keep track of it.
         </div>
       </div>
     </div>
