--- a/app/views/tags/new.html.erb
+++ b/app/views/tags/new.html.erb
@@ -1,11 +1,1 @@
-<% content_for :title do %>New Tag<% end %>
-
-<% content_for :header do %>
-  <div class="text-center">
-    <h2>New Tag</h2>
-  </div>
-<% end %>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', tags_path %>
+<%= render 'layouts/forms/new', :record => @tag %>
