--- a/app/views/users/watchlist.html.erb
+++ b/app/views/users/watchlist.html.erb
@@ -1,8 +1,13 @@
-<% content_for :title do %><%= @user.name %>'s Watchlist<% end %>
+<% content_for :title do %><%= (current_user == @user or privacy_settings(@user).include? "ShowWatchlist" ) ? "#{@user.name}'s Watchlist"  : "A Watchlist" %><% end %>
 
 <% content_for :header do %>
+
   <div class="text-center">
-    <h2><%= current_user == @user ? "Your" : "#{@user.name}'s" %> Watchlist</h2>
+    <% if current_user == @user or privacy_settings(@user).include? "ShowWatchlist"  %>
+      <h2><%= current_user == @user ? "Your" : "#{@user.name}'s" %> Watchlist</h2>
+    <% else %>
+       <h2>Some User's Watchlist</h2>
+    <% end %>
     <div class="sublink">
       <% if current_user == @user %>
           Manage your watchlist <%= link_to "here", watchlist_edit_user_path(:id => current_user.id) %>
@@ -11,6 +16,7 @@
   </div>
 <% end %>
 
+<% if current_user == @user or privacy_settings(@user).include? "ShowWatchlist"  %>
 <% content_for :left_sidebar do %>
     <%= render :partial => 'layouts/grid/selection_sidebar', :locals =>  {:collection => @watched}%>
 <% end %>
@@ -22,4 +28,6 @@
 <% content_for :right_sidebar do %>
   <%= render :partial => 'layouts/grid/filter_sort_sidebar' %>
 <% end %>
-
+<% else %>
+  <h4 class="text-center">This watchlist has been set to private</h4>
+<% end%>
