--- a/app/views/layouts/images/_image_partial.html.erb
+++ b/app/views/layouts/images/_image_partial.html.erb
@@ -1,10 +1,10 @@
 <div id="Image">
   <div class="text-center thumbnail thumbnail-margined">
-    <% if @image.nil? == false%>
+    <% unless @image.nil? %>
       <% if @show_nws.nil? == true %>
         <%= image_helper(@image, "full", :title => @image.name)%>    
         <% if @image.rating == "NWS" %>
-          <%= link_to "Show NWS", updateimage_path(:id => @image.id, :show_nws => "yes"), remote: true%>
+          <%= link_to "Show NWS", update_image_path(:id => @image.id, :show_nws => "yes"), remote: true%>
         <% end %>
       <% else %>
         <%= image_helper(@image, "full", :show_nws => true, :title => @image.name)%>
