--- a/app/views/layouts/primary_models/_album_list.html.erb
+++ b/app/views/layouts/primary_models/_album_list.html.erb
@@ -1,3 +1,4 @@
+<%= paginate albums, param_name: :album_page, remote: true %>
 <% albums.each do |album| %>
   <div class="album">
     <div class="album_art"><%= primary_image_helper(album, album, 'thumb', nil_image: true, square: true)%></div>
@@ -8,3 +9,4 @@
     <div class="album_date"><%= date_helper(album, 'release_date', :calender_link => false)%></div>
   </div>
 <% end %>
+<%= paginate albums, param_name: :album_page, remote: true %>
