finished script controller testing and user model testing

--- a/app/views/layouts/forms/fields/_artist_relations.html.erb
+++ b/app/views/layouts/forms/fields/_artist_relations.html.erb
@@ -14,5 +14,5 @@
     <% end %>
   <% end %>
   <div id='<%= "Artists" + record.id.to_s %>'></div>
-  <%= link_to "Add an Artist", addmodel_path(parent_div: "#Artists#{record.id.to_s}", field_names: "#{form_prefix}[new_artist_ids]", artist_category_names: "#{form_prefix}[new_artist_categories][]", autocomplete_path: "artist_namehash" ), :remote => true %></br></br>     
+  <%= link_to "Add an Artist", add_model_path(parent_div: "#Artists#{record.id.to_s}", field_names: "#{form_prefix}[new_artist_ids]", artist_category_names: "#{form_prefix}[new_artist_categories][]", autocomplete_path: "artist_namehash" ), :remote => true %></br></br>     
 </div>
