--- a/app/views/layouts/forms/fields/_events.html.erb
+++ b/app/views/layouts/forms/fields/_events.html.erb
@@ -4,5 +4,5 @@
   <% end %>
 <% end %>
 <div id="EventFields"></div>
-<%= link_to "Add an Event", addmodel_path(parent_div: "#EventFields", field_names: "#{form_prefix}[new_event_shorthands]", label: "Short Name:"), :remote => true %></br></br>
+<%= link_to "Add an Event", add_model_path(parent_div: "#EventFields", field_names: "#{form_prefix}[new_event_shorthands]", label: "Short Name:"), :remote => true %></br></br>
 
