--- a/app/views/scripts/add_reference_form.js.erb
+++ b/app/views/scripts/add_reference_form.js.erb
@@ -1,1 +1,1 @@
-$('#ReferenceFields').append('<%= escape_javascript(render :partial => 'layouts/forms/add_reference_form') %>');
+$('#<%= @div_id %>').append('<%= escape_javascript(render :partial => 'layouts/forms/add_reference_form') %>');
