--- a/app/views/scripts/well_toggle.js.erb
+++ b/app/views/scripts/well_toggle.js.erb
@@ -1,4 +1,4 @@
-$('#<%= @divid %>').toggle();
+$('#<%= @div_id %>').toggle();
 
-$('#<%= @toggleid %>').children().first().toggle();
-$('#<%= @toggleid %>').children().first().next().toggle();
+$('#<%= @toggle_id %>').children().first().toggle();
+$('#<%= @toggle_id %>').children().first().next().toggle();
