--- a/app/views/layouts/forms/_add_reference_form.html.erb
+++ b/app/views/layouts/forms/_add_reference_form.html.erb
@@ -1,10 +1,10 @@
 <div class="row-fluid">
-  <% if @fieldsfor.nil? == false %>
-    <%= fields_for (@fieldsfor + "[types]") do |f| %>
+  <% if @fields_for.nil? == false %>
+    <%= fields_for (@fields_for + "[types]") do |f| %>
       <%= f.label '', "Reference Link:", :class => "control-label" %>
       <%= f.select '', Album::ReferenceLinks, :include_blank => true %>   
     <% end %>   
-    <%= fields_for (@fieldsfor + "[links]") do |f| %>                
+    <%= fields_for (@fields_for + "[links]") do |f| %>                
       <%= f.text_field '', class: "input-xlarge" %>
     <% end %>           
   <% end %>
