--- a/app/views/pages/forgotten_password.html.erb
+++ b/app/views/pages/forgotten_password.html.erb
@@ -10,11 +10,9 @@
 
 <% if notice.nil? %>
   <h5>Please enter your email to request a password reset</h5>
-  <%= form_for :website, :url => {:controller => :users, :action => 'passwordresetrequest'}, :html => {:class => 'form-horizontal'}  do |f| %>
-    <%= fields_for :email do |f| %>
-      <%= f.label '', 'Email:' %>
-      <%= f.text_field '', :class => 'controls' %>
-    <% end %>
+  <%= form_for :website, url: request_password_reset_email_path, :html => {:class => 'form-horizontal'}  do |f| %>
+    <%= label_tag :email, 'Email:' %>
+    <%= text_field_tag :email, nil, :class => 'controls' %>
     <%= f.submit 'Submit' %>
   <% end %>
 <% end %>
