--- a/app/assets/stylesheets/content.scss
+++ b/app/assets/stylesheets/content.scss
@@ -259,7 +259,8 @@
         float: left;
         width: 20%;
         position: relative;
-        min-height: 50px;     
+        min-height: 50px;
+        padding-bottom: 10px;   
         .sortable-record {
           font-size: 90%;
           font-weight: bold;
