--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -23,6 +23,22 @@
   }
 }
 
+
+.single-form {
+  background-color: $well-background-color;
+  border: 1px solid $border-color;
+  padding: 18px 15px 18px 15px;
+  margin-bottom: 15px;
+  label {font-weight: normal;}
+  .section-content {
+    padding-left: 30px;
+    margin-bottom: 10px;
+    .form-checkbox {
+      margin-left: 30px;
+    }
+  }
+}
+
 .form-horizontal select {
   margin-left: 8px;
   width: 25%;
